fix(in-progress-schedule-page): make horizontal scroll bar static (#402)
When you navigate to in-progress schedule
page and there are more records to display,
the horizontal scroll bar does not appear
until you scroll.

This commit ensures that the horizontal
scroll bar is visible to the user
immediately he/she views a schedule page
that has more records to display.

This commit also fix the styling issue on
the schedule card by making it to wrap the
content in the card. it also ensure there
is a background in the schedule header,
so that if a user scroll up, the text in the
header will not conflict with the text in
the cards.

[Fixes #155315112]

--- a/src/app/modules/request-pool/in-progress-single-view/in-progress-single-view.component.scss
+++ b/src/app/modules/request-pool/in-progress-single-view/in-progress-single-view.component.scss
@@ -232,22 +232,22 @@ a {
   background-color: transparent !important;
 }
 
-.request-details-wrapper , .request-schedule-wrapper {
+.request-details-wrapper , .inprogress-request-schedule-wrapper {
   display: inline-block;
   margin-right: 290px;
 }
 
-.request-schedule-wrapper {
-	width: 100%;
+.inprogress-request-schedule-wrapper {
+	width: calc(100vw - 28%);
 	height: 100%;
 	overflow-x: scroll;
 }
 
-.request-schedule-wrapper::-webkit-scrollbar {
+.inprogress-request-schedule-wrapper::-webkit-scrollbar {
 	height: 8px;
 }
 
-.request-schedule-wrapper::-webkit-scrollbar-thumb {
+.inprogress-request-schedule-wrapper::-webkit-scrollbar-thumb {
 	border-radius: 5px;
 	background: $scroll-bar-color;
 }
